Signed-off-by: Paskal Sitepu <rmnscnce@ya.ru>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.0.2"
 edition = "2024"
 
 [dependencies]
-thiserror = { version = "2.0" }
-libc = { version = "0.2" }
+thiserror = { version = "2.0", default-features = false }
+libc = { version = "0.2", default-features = false }
 jni = { version = "0.21" }
 bitflags = { version = "2.9" }
